--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,5 +6,30 @@
 
     <body>
         <h1>Pizza</h1>
+
+        <img src="../images/pizza-1.jpg" alt="A pizza">
+        <h2>Description</h2>
+        <p>This recipe will guide you through on how to make a pizza.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>18 to 20 slices pepperoni</li>
+            <li>12 ounces mozzarella cheese, grated</li>
+            <li>1/2 cup pizza sauce</li>
+            <li>16 ounces of pizza dough</li>
+            <li>1/2 teaspoon kosher salt</li>
+            <li>1/2 teaspoon ground black pepper</li>
+            <li>1 teaspoon olive oil</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat the oven</li>
+            <li>Make the sauce</li>
+            <li>Roll out the dough</li>
+            <li>Add the toppings</li>
+            <li>Cook the pizza</li>
+            <li>Slice and serve</li>
+        </ol>
     </body>
 </html>
