--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -7,5 +7,28 @@
     <body>
         <h1>Banana Bread</h1>
         <img src="../images/Simply-Recipes-Easy-Banana-Bread-LEAD-2-2-63dd39af009945d58f5bf4c2ae8d6070.webp" width="800" alt="Banana Bread">
+        <h2>Description</h2>
+        <p>Banana Bread recipe!</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 to 3 medium (7" to 7-7/8" long) very ripe bananas, peeled (about 1 1/4 to 1 1/2 cups mashed)</li>
+            <li>1/3 cup butter, unsalted or salted, melted</li>
+            <li>1/2 teaspoon baking soda </li>
+            <li>1 pinch salt </li>
+            <li>3/4 cup sugar (1/2 cup if you would like it less sweet, 1 cup if more sweet) </li>
+            <li>1 large egg, beaten </li>
+            <li>1 teaspoon vanilla extract </li>
+            <li>1 1/2 cups all purpose flour </li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
     </body>
 </html>
