--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 
         <p><a href="recipes/pizza.html">Pizza</a></p>
         <p><a href="recipes/bananabread.html">Banana Bread</a></p>
+        <p><a href="recipes/meatballs.html">Meatballs</a></p>
     </body>
 </html>
